# C_OperatingSystem

./: .gitignore  CMakeLists.txt  Compilation Steps.txt  Notes to ask doctor  main.c  process_simulator  report.txt  test.c
Milestone1/src/: ThreadMetric.h  ThreadUtils.h  TimeUtils.c  TimeUtils.h  main.c
Milestone2/: CMakeLists.txt  Notes to ask doctor  Program_3.txt  Running and compliation instructions.txt
Milestone2/GUI/: makefile  process_simulator  simulator.c
Milestone2/include/: Queue.h  Scheduler.h  Semaphores.h  Task.h  os_logic.h
Milestone2/old/: Scheduler.c  Scheduler.h  SchedulerTest.c  Semaphores.c  Task.c  Task.h
Milestone2/src/: CMakeLists.txt  FileReader.c  OLdmain.c  Queue.c  Scheduler.c  SchedulerTest.c  Semaphores.c  Task.c  main.c  os_logic.c
Milestone2/src/programs/: Program_3.txt
src/: ThreadMetric.c  ThreadMetric.h  ThreadUtils.c  main.c  test.c
